# dlo-concept

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cli.py  core.py  demo_init.json  pyproject.toml  test_dlo_adapter.py
app/: settings.py  urls.py
demo_pages/: apps.py  urls.py  views.py
demo_pages/static/: style.css
demo_pages/templates/: login.html  profile_dashboard.html
doc/: dlo.org
minddistrict_connect/: admin.py  apps.py  controller.py  dlo.py  models.py  test_dlo_adapter.py  urls.py  views.py
minddistrict_connect/migrations/: 0001_initial.py  0002_platformprofile_config.py
