[project]
name = "coding-assignment-dlo"
version = "0.1.1"
description = "DLO connction poc"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.6.9",
    "fire>=0.7.0",
    "django>=5.1.2",
    "pytest>=8.3.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "ipython>=8.28.0",
]
